--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f3f3f3;
-  --dark: #333333;
+  --dark: #212121;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -52,7 +52,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   color: #333;
   text-align: left;
@@ -355,7 +355,7 @@ hr {
 small,
 .small {
   font-size: 80%;
-  font-weight: 200; }
+  font-weight: 400; }
 
 mark,
 .mark {
@@ -1197,19 +1197,19 @@ pre {
 .table-dark,
 .table-dark > th,
 .table-dark > td {
-  background-color: #c6c6c6; }
+  background-color: #c1c1c1; }
 
 .table-dark th,
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-  border-color: #959595; }
+  border-color: #8c8c8c; }
 
 .table-hover .table-dark:hover {
-  background-color: #b9b9b9; }
+  background-color: #b4b4b4; }
   .table-hover .table-dark:hover > td,
   .table-hover .table-dark:hover > th {
-    background-color: #b9b9b9; }
+    background-color: #b4b4b4; }
 
 .table-active,
 .table-active > th,
@@ -1297,7 +1297,7 @@ pre {
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -1681,7 +1681,7 @@ textarea.form-control {
 
 .btn {
   display: inline-block;
-  font-weight: 200;
+  font-weight: 400;
   color: #333;
   text-align: center;
   vertical-align: middle;
@@ -1887,27 +1887,27 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #fff;
-  background-color: #333333;
-  border-color: #333333;
+  background-color: #212121;
+  border-color: #212121;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); }
   .btn-dark:hover {
     color: #fff;
-    background-color: #202020;
-    border-color: #1a1a1a; }
+    background-color: #0e0e0e;
+    border-color: #080808; }
   .btn-dark:focus, .btn-dark.focus {
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(82, 82, 82, 0.5); }
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(66, 66, 66, 0.5); }
   .btn-dark.disabled, .btn-dark:disabled {
     color: #fff;
-    background-color: #333333;
-    border-color: #333333; }
+    background-color: #212121;
+    border-color: #212121; }
   .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active,
   .show > .btn-dark.dropdown-toggle {
     color: #fff;
-    background-color: #1a1a1a;
-    border-color: #131313; }
+    background-color: #080808;
+    border-color: #010101; }
     .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus,
     .show > .btn-dark.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(82, 82, 82, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(66, 66, 66, 0.5); }
 
 .btn-outline-primary {
   color: lime;
@@ -2057,28 +2057,28 @@ fieldset:disabled a.btn {
       box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(243, 243, 243, 0.5); }
 
 .btn-outline-dark {
-  color: #333333;
-  border-color: #333333; }
+  color: #212121;
+  border-color: #212121; }
   .btn-outline-dark:hover {
     color: #fff;
-    background-color: #333333;
-    border-color: #333333; }
+    background-color: #212121;
+    border-color: #212121; }
   .btn-outline-dark:focus, .btn-outline-dark.focus {
-    box-shadow: 0 0 0 0.2rem rgba(51, 51, 51, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(33, 33, 33, 0.5); }
   .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-    color: #333333;
+    color: #212121;
     background-color: transparent; }
   .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active,
   .show > .btn-outline-dark.dropdown-toggle {
     color: #fff;
-    background-color: #333333;
-    border-color: #333333; }
+    background-color: #212121;
+    border-color: #212121; }
     .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-dark.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(51, 51, 51, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(33, 33, 33, 0.5); }
 
 .btn-link {
-  font-weight: 200;
+  font-weight: 400;
   color: #12bbad;
   text-decoration: none; }
   .btn-link:hover {
@@ -2302,7 +2302,7 @@ input[type="button"].btn-block {
   width: 100%;
   padding: 0.25rem 1.5rem;
   clear: both;
-  font-weight: 200;
+  font-weight: 400;
   color: #212529;
   text-align: inherit;
   white-space: nowrap;
@@ -2513,7 +2513,7 @@ input[type="button"].btn-block {
   padding: 0.375rem 0.75rem;
   margin-bottom: 0;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   color: #495057;
   text-align: center;
@@ -2698,7 +2698,7 @@ input[type="button"].btn-block {
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   color: #495057;
   vertical-align: middle;
@@ -2773,7 +2773,7 @@ input[type="button"].btn-block {
   z-index: 1;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -3611,13 +3611,13 @@ input[type="button"].btn-block {
 
 .badge-dark {
   color: #fff;
-  background-color: #333333; }
+  background-color: #212121; }
   a.badge-dark:hover, a.badge-dark:focus {
     color: #fff;
-    background-color: #1a1a1a; }
+    background-color: #080808; }
   a.badge-dark:focus, a.badge-dark.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(51, 51, 51, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(33, 33, 33, 0.5); }
 
 .jumbotron {
   padding: 2rem 1rem;
@@ -3719,13 +3719,13 @@ input[type="button"].btn-block {
     color: #656565; }
 
 .alert-dark {
-  color: #1b1b1b;
-  background-color: #d6d6d6;
-  border-color: #c6c6c6; }
+  color: #111111;
+  background-color: lightgray;
+  border-color: #c1c1c1; }
   .alert-dark hr {
-    border-top-color: #b9b9b9; }
+    border-top-color: #b4b4b4; }
   .alert-dark .alert-link {
-    color: #020202; }
+    color: black; }
 
 @-webkit-keyframes progress-bar-stripes {
   from {
@@ -3994,15 +3994,15 @@ input[type="button"].btn-block {
     border-color: #7e7e7e; }
 
 .list-group-item-dark {
-  color: #1b1b1b;
-  background-color: #c6c6c6; }
+  color: #111111;
+  background-color: #c1c1c1; }
   .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-    color: #1b1b1b;
-    background-color: #b9b9b9; }
+    color: #111111;
+    background-color: #b4b4b4; }
   .list-group-item-dark.list-group-item-action.active {
     color: #fff;
-    background-color: #1b1b1b;
-    border-color: #1b1b1b; }
+    background-color: #111111;
+    border-color: #111111; }
 
 .close {
   float: right;
@@ -4227,7 +4227,7 @@ a.close.disabled {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   text-align: left;
   text-align: start;
@@ -4312,7 +4312,7 @@ a.close.disabled {
   max-width: 276px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-style: normal;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.5;
   text-align: left;
   text-align: start;
@@ -4712,12 +4712,12 @@ button.bg-light:focus {
   background-color: #dadada !important; }
 
 .bg-dark {
-  background-color: #333333 !important; }
+  background-color: #212121 !important; }
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
-  background-color: #1a1a1a !important; }
+  background-color: #080808 !important; }
 
 .bg-white {
   background-color: #fff !important; }
@@ -4777,7 +4777,7 @@ button.bg-dark:focus {
   border-color: #f3f3f3 !important; }
 
 .border-dark {
-  border-color: #333333 !important; }
+  border-color: #212121 !important; }
 
 .border-white {
   border-color: #fff !important; }
@@ -6969,7 +6969,7 @@ button.bg-dark:focus {
   font-weight: lighter !important; }
 
 .font-weight-normal {
-  font-weight: 200 !important; }
+  font-weight: 400 !important; }
 
 .font-weight-bold {
   font-weight: 700 !important; }
@@ -7026,10 +7026,10 @@ a.text-light:hover, a.text-light:focus {
   color: #cdcdcd !important; }
 
 .text-dark {
-  color: #333333 !important; }
+  color: #212121 !important; }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: #0d0d0d !important; }
+  color: black !important; }
 
 .text-body {
   color: #333 !important; }
